tests/resource/invalid/type/class/access_unassigned_field.mamba
class X
    def z: Int

    def __init__(self) =>
        def z: Int := self.z + 5
